# Projeto-CG

./: .gitignore
Generator/: CMakeLists.txt  main.cpp
Generator/Generator/: Generator.sln  Generator.vcxproj  Main.cpp
Generator/headers/: Esfera.h  Figuras.h  Generator.h
Generator/src/: Cone.cpp  Esfera.cpp  Figuras.cpp  Generator.cpp
PH1/Generator/: README.md  main.cpp
PH1/Generator/headers/: Cone.h  Point3D.h
PH1/Generator/src/: Figuras.cpp  Point3D.cpp  Triangle.cpp
PH1/Visualizator/: CMakeLists.txt  main.cpp  tinyxml2.cpp  tinyxml2.h
PH2/Generator/src/: Anel.cpp  Figuras.cpp
PH2/Visualizator/: CMakeLists.txt  main.cpp
PH2/Visualizator/xml/: configuration.xml  ring.3d
PH3/Generator/: CMakeLists.txt  main.cpp
PH3/Generator/headers/: Figuras.h  Point3D.h  Surface.h  Triangle.h
PH3/Generator/src/: Esfera.cpp  Figuras.cpp  Generator.cpp  Point3D.cpp  Surface.cpp
PH3/Visualizator/: CMakeLists.txt  catmull.cpp  catmull.h  drawer.cpp  drawer.h  load.cpp  main.cpp  types.h
PH3/Visualizator/src/: drawer.cpp  error.cpp  error.h  load.cpp  load.h  main.cpp  tinyxml2.cpp  tinyxml2.h  types.h
PH3/Visualizator/xml/: configuration.xml  plane.3d  teapot.3d
PH4/Generator/: CMakeLists.txt
PH4/Generator/headers/: Anel.h  Cone.h  Esfera.h  Figuras.h  Normals.h  Point2D.h  Point3D.h  Surface.h  Triangle.h  TriangleTexture.h
PH4/Generator/src/: Anel.cpp  Cone.cpp  Esfera.cpp  Generator.cpp  Normals.cpp  Point2D.cpp  Point3D.cpp  Surface.cpp  Triangle.cpp  TriangleTexture.cpp
PH4/Visualizator/: CMakeLists.txt
PH4/Visualizator/src/: catmull.cpp  drawer.cpp  drawer.h  load.cpp  main.cpp  types.h
PH4/Visualizator/xml/: box.3d  configuration.xml  sphere.3d  teapot.3d
Visualizator/: README.md  main.cpp
Visualizator/xml/: box.3d  cone.3d  configuration.xml  plane.3d  sphere.3d
